# realtime-translation

./: .env.template  pyproject.toml  simple_mic.py
